<resources>
    <string name="app_name">RRM 360 Radio</string>
    <string name="title_activity_main">Radio Stream</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="english">English</string>
    <string name="bangla">বাংলা</string>
    <string name="bangla_radio">বাংলা রেডিও</string>
    <string name="music">Music</string>
    <string name="news">News</string>
    <string name="favourite">Favourite</string>
    <string name="recent">Recent</string>
    <string name="share_app">Share App</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="copy_right">Copyright ©2017 Developed by RRMSENSE Global Systech Ltd.</string>

    <string name="company_info_details">RRMSense Global Systech Limited was founded in the early 2015 by the honorable Chairman of the RRM Group. Born out of the need for IT support of the different concerns of RRM Group, the Chairman Sumon Chowdhury has put together a potential IT team. The team has excelled in ensuring the needs of the concerns of RRM Group and also started providing the IT Solutions globally.</string>
    <string name="refresh">Refresh</string>
    <string name="company_name">RRM Sense Global Systech Ltd.</string>
    <string name="company_information">Company Information</string>
    <string name="developer_name">A. S. M. Sayem</string>
    <string name="website">Website: http://www.rrmsense.com</string>
    <string name="dev_info">Developer Information</string>

</resources>
