<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bangla"
            android:icon="@drawable/ic_bangla"
            android:title="@string/bangla_radio" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music"
            android:title="@string/music" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_art_track_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/heart_yellow"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/recent"
            android:title="@string/recent" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share_app" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/aboutus"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/setting"
            android:title="@string/settings" />
    </group>

</menu>
